--- a/css/account.css
+++ b/css/account.css
@@ -2,53 +2,29 @@
     margin: 0px;
     padding: 0px;
 }
-.wrapper{
-    width: 100%;
-    margin: auto;
-    overflow: hidden;
-    
-}
-
-#header{
-    background-color:white;
-    width: 100%;
-    height: 40px;
-
-}
-.nav1__menu {
-    display: flex;
-    align-items: center;
-    height: 100%;
-    padding: 3.8rem 0.65rem;
-    margin-left: 80px;
-    position: relative;
-    
-  }
-
- 
-.nav1__menu:hover .nav__mega-container {
-    transform: translateX(20%);
-    z-index: 10;
-  }
-.nav1__menu:hover .nav__menu-parrent::after {
-    opacity: 1;
-  }
 
 
-h1{
-    color:black;
-    
-    text-align: center;
-    font-size: 30px;
-    font-style:oblique;
-    
-}
+
 .container{
     width: 100%;
 
     height: 400px;
-    background-color: white;
+    
+    
+    
   
+    
+    
+}
+h1.account_td{
+    color:black;
+    margin-top: 100px;
+    text-align: center;
+    
+    
+
+    font-size: 20px;
+    
     
     
 }
@@ -58,7 +34,7 @@ h1{
     width: 50%;
     height: 300px;
     text-align:center;
-    margin-top: 70px;
+    margin-top: 60px;
  
   
 }
@@ -68,10 +44,30 @@ h1{
     width: 50%;
     height: 200px;
     text-align:center;
-    margin-top: 67px;
+    margin-top: 61px;
     
     
 
+
+}
+#register{
+    float: right;
+    width: 100%;
+    height: 200px;
+    text-align:center;
+    margin-top: 40px;
+    
+    
+    
+
+
+}
+.register_td{
+    color: black;
+    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    margin-bottom: 30px;
+    font-size: 20px;
+    margin-right: 426px;
 
 }
 h2.customers {
@@ -83,14 +79,14 @@ h2.customers {
 
 }
  input {
-    width: 400px ;
+    width: 500px ;
     height: 35px ;
     margin-bottom: 30px;
     
 
 }
 input.login1   {
-    width: 409px ;
+    width: 500px ;
     height: 35px ;
     margin-top: 20px;
     background-color: black;
@@ -98,27 +94,33 @@ input.login1   {
     cursor: pointer;
     text-align: center;
 }
-a1{
+.flname{
+    width: 246px ;
+    height: 35px ;
+    margin-bottom: 30px;
+}
+
+
+a.bca{
     color:black;
-    font-size: small;
+    font-size: smaller;
+    font-family:Arial, Helvetica, sans-serif;
     
-    text-align:justify;
+    
     
     
     
 }
+
  a.lk{
     
-    font-style:oblique;
+    
     float: right;
     color: black;
-    margin-right: 110px;
+    margin-right: 70px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: x-small;
 }
-.footer{
-   width: 100%;
-   height: 90px;
-   margin-top: 40px;
 
-   clear: both;
-    
-}
+ 
+
