--- a/css/account.css
+++ b/css/account.css
@@ -1,130 +1,95 @@
-*{
-    margin: 0px;
-    padding: 0px;
+* {
+  margin: 0px;
+  padding: 0px;
 }
 
-
-
-.container{
-    width: 100%;
-
-    height: 400px;
-    
-    
-    
-    
-  
-    
-    
+.container {
+  width: 100%;
+  height: 400px;
 }
-h1.account_td{
-    color:black;
-    margin-top: 100px;
-    text-align: center;
-    
-    
-
-    font-size: 20px;
-    
-    
-    
+h1.account_td {
+  color: black;
+  margin-top: 100px;
+  text-align: center;
+  font-size: 20px;
 }
 
-#create{
-    float: left;
-    width: 50%;
-    height: 300px;
-    text-align:center;
-    margin-top: 60px;
- 
-  
+#create {
+  float: left;
+  width: 50%;
+  height: 300px;
+  text-align: center;
+  margin-top: 60px;
 }
 
-#login{
-    float: right;
-    width: 50%;
-    height: 200px;
-    text-align:center;
-    margin-top: 61px;
-    
-    
-
-
+#login {
+  float: right;
+  width: 50%;
+  height: 200px;
+  text-align: center;
+  margin-top: 61px;
 }
-#register{
-    float: right;
-    width: 100%;
-    height: 200px;
-    text-align:center;
-    margin-top: 40px;
-    
-    
-    
-
-
+.register_wrap {
+  margin-top: 40px;
+  display: inline-block;
+  width: 150px;
+  position: relative;
+  background-color: black;
+  font-size: 12px;
+  height: 35px;
 }
-.register_td{
-    color: black;
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-    margin-bottom: 30px;
-    font-size: 20px;
-    margin-right: 426px;
+.register {
+  color: white;
+  position: absolute;
+  top: 35%;
+  left: 16%;
+}
 
+.register_td {
+  color: black;
+  font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
+  margin-bottom: 30px;
+  font-size: 20px;
+  margin-right: 426px;
 }
 h2.customers {
-    color: black;
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-    margin-bottom: 30px;
-    font-size: 20px;
-   
-
+  color: black;
+  font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
+  margin-bottom: 30px;
+  font-size: 20px;
 }
- input {
-    width: 500px ;
-    height: 35px ;
-    margin-bottom: 30px;
-    
-
-}
-input.login1   {
-    width: 500px ;
-    height: 35px ;
-    margin-top: 20px;
-    background-color:black;
-    color: white;
-    cursor: pointer;
-    text-align: center;
+input {
+  width: 500px;
+  height: 35px;
+  margin-bottom: 30px;
 }
 
-
-
-.flname{
-    width: 246px ;
-    height: 35px ;
-    margin-bottom: 30px;
+.login1 {
+  width: 500px;
+  height: 35px;
+  margin-top: 20px;
+  background-color: black;
+  color: white;
+  cursor: pointer;
+  text-align: center;
 }
 
-
-a.bca{
-    color:black;
-    font-size: smaller;
-    font-family:Arial, Helvetica, sans-serif;
-    
-    
-    
-    
-    
+.flname {
+  width: 246px;
+  height: 35px;
+  margin-bottom: 30px;
 }
 
- a.lk{
-    
-    
-    float: right;
-    color: black;
-    margin-right: 70px;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-size: x-small;
+.bca {
+  color: black;
+  font-size: smaller;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
- 
-
+.lk {
+  float: right;
+  color: black;
+  margin-right: 130px;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
+  font-size: x-small;
+}
