--- a/css/account.css
+++ b/css/account.css
@@ -37,9 +37,10 @@ h1.account_td {
   width: 150px;
   position: relative;
   background-color: black;
-  font-size: 12px;
+  font-size: 15px;
   height: 35px;
   color: white;
+  text-align: center;
 }
 .register {
  
@@ -66,6 +67,15 @@ input {
   width: 500px;
   height: 35px;
   margin-bottom: 30px;
+}
+.creat_account {
+  color: white;
+  padding-top: 20px;
+
+  
+  
+  cursor: pointer;
+  
 }
 
 .login1 {
