--- a/css/account.css
+++ b/css/account.css
@@ -6,7 +6,8 @@
 .container {
 
   width: 100%;
-  height: 400px;
+  height: 100%;
+  margin-bottom: 20px;
 }
 h1.account_td {
   color: black;
@@ -46,10 +47,11 @@ h1.account_td {
 }
 .register {
  
-  position: absolute;
+  margin-left: 30% ;
+  
  
-  top: 15%;
-  left: 30%;
+
+ 
 }
 
 .register_td {
@@ -59,6 +61,7 @@ h1.account_td {
   font-size: 20px;
   margin-right: 426px;
 }
+
 h2.customers {
   color: black;
   font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
