--- a/css/payment.css
+++ b/css/payment.css
@@ -135,7 +135,8 @@
     text-align: center;
   }
   .keeponbuying{  
-    margin-left: 70%;     
+    margin-left: 20%;     
+    margin-top: 30%;
     background-color: black;
     color: white;
     border: 2px solid black;
