--- a/css/account.css
+++ b/css/account.css
@@ -106,6 +106,11 @@ input {
   height: 35px;
   margin-bottom: 5%;
 }
+.usname {
+  width: 79%;
+  height: 35px;
+  margin-bottom: 5%;
+}
 
 .bca {
   color: black;
